removed debug stdout printings