@@ -9,14 +9,10 @@ public class FifoRequestPolicy extends RequestPolicy {
   @Override
   public Request selectRequest(Building producer, List<Request> requests) {
     if (requests.isEmpty()) {
-      System.out.println("[DEBUG] FifoRequestPolicy: " + producer.getName() + " has no requests to select");
       return null;
     }
-    Request selected = requests.getFirst();
-    System.out.println("[DEBUG] FifoRequestPolicy: " + producer.getName() 
-                     + " selected first request for " + selected.getItem().getName()
-                     + ", deliverTo=" + (selected.getDeliverTo() != null ? selected.getDeliverTo().getName() : "user"));
-    return selected;
+    Request first = requests.get(0);
+    return first;
   }
 
   @Override
